# loom

./: .gitignore  Anchor.toml  BUILD.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
conformance/: expected.json
docs/: architecture.md  quickstart.md  schema-reference.md
engine-core/: Cargo.toml
engine-core/examples/: vectors.rs
engine-core/src/: addressing.rs  bridge.rs  component.rs  economy.rs  error.rs  hash.rs  ids.rs  lib.rs  mods.rs  schema.rs  system.rs  tick.rs  world.rs
engine-core/tests/: conformance.rs  economy.rs  p1_ecs.rs  p2_tick.rs  p3_bridge.rs  p4_mods.rs
programs/loom-engine/: Cargo.toml
programs/loom-engine/src/: lib.rs
sdk/: package.json
sdk/src/: addressing.ts  bridge.ts  client.ts  codegen.ts  economy.ts  errors.ts  hash.ts  index.ts  indexer.ts  mods.ts  record.ts  schema.ts  system.ts  tick.ts  world.ts
sdk/test/: addressing.test.ts  bridge.test.ts  codegen.test.ts  conformance.test.ts  economy.test.ts  ecs.test.ts  hash.test.ts  helpers.ts  tick.test.ts
worlds/smallholm/: package.json
worlds/smallholm/src/: agents.ts  run.ts  world.ts
worlds/smallholm/test/: world.test.ts
