# Anchor workspace for the on-chain program(s). The deterministic core lives
# in the standalone `engine-core` crate (its own Cargo.toml, host-tested with
# `cargo test`), so it is excluded here to keep `anchor build` focused on the
# program and `cargo test` of the core fast and Solana-toolchain-free.
[workspace]
members = ["programs/*"]
exclude = ["engine-core"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
